2009-02-22  Sébastien Granjoux  <seb.sfo@free.fr>

	* plugins/search/search-replace.c:
	Fix #572608 – crash clicking on 'find in files...' results.

2009-02-22  Sébastien Granjoux  <seb.sfo@free.fr>

	* plugins/search/search-replace.c,
	plugins/search/search-replace_backend.c:
	Backward search go back one character at a time
	Fix an error comparing characters with bytes position

2009-02-22  Johannes Schmid <jhs@gnome.org>

	* plugins/message-view/anjuta-msgman.c (anjuta_msgman_dispose):
	Don't explicitly close all message-views in dispose as it's done implicitly by
	GtkContainer anyway (might fix #572451)

2009-02-21  James Liggett  <jrliggett@cox.net>

	* plugins/git/Makefile.am:
	* plugins/git/git-vcs-interface.c (git_ivcs_iface_init),
	(git_ivcs_add), (git_ivcs_checkout),
	(on_diff_command_data_arrived), (git_ivcs_diff),
	(on_status_command_data_arrived), (git_ivcs_query_status),
	(git_ivcs_remove):
	* plugins/git/git-vcs-interface.h:
	* plugins/git/git.plugin.in:
	* plugins/git/plugin.c:
	Implement the beginnings of IAnjutaVcs for the git plugin. Checkout and 
	operation canceling aren't supported yet. Everything else should work.

2009-02-21  Sébastien Granjoux  <seb.sfo@free.fr>

	* plugins/search/search-replace.c:
	Remove one Valgrind warning when searching something

2009-02-21  Sébastien Granjoux  <seb.sfo@free.fr>

	* plugins/search/search-replace.c:
	Fix #571760 – Find & Replace is broken (due to my previous changes)

	* plugins/search/Makefile.am:
	Define G_LOG_DOMAINS correctly

2009-02-21  Johannes Schmid  <jhs@gnome.org>

	* libanjuta/anjuta-plugin-description.c
	(anjuta_plugin_description_new_from_string):
	* libanjuta/anjuta-plugin-handle.c (anjuta_plugin_handle_new):
	
	Fixed some errors reported by valgrind

2009-02-20  Massimo Cora'  <mcora@svn.gnome.org>

	* plugins/language-support-cpp-java/plugin.c (spaces_only):
	fixed a crasher: press enter on empty line.

2009-02-20  Massimo Cora'  <mcora@svn.gnome.org>

	* .cvsignore:
	* data/.cvsignore: