@@ -1,3 +1,8 @@
+2009-02-23  Johannes Schmid  <jhs@gnome.org>
+
+	* plugins/build-basic-autotools/plugin.c (on_build_mesg_format):
+	Only marks errors as such (e.g. only messages that contains "error:")
+
 2009-02-22  Sébastien Granjoux  <seb.sfo@free.fr>
 
 	* plugins/search/search-replace.c:
